// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditConditionLink renders for a condition using actual 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-center-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiText emotion-euiText-s"
    >
      Update rule condition from 5 to
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFormControlLayout emotion-euiFormControlLayout-compressed"
    >
      <div
        class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
      >
        <input
          aria-label="Enter numeric value for condition"
          class="euiFieldNumber emotion-euiFieldNumber-compressed"
          placeholder="Enter value"
          step="any"
          type="number"
          value="210"
        />
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <button
      class="euiLink emotion-euiLink-primary"
      type="button"
    >
      Update
    </button>
  </div>
</div>
`;

exports[`EditConditionLink renders for a condition using diff from typical 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-center-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiText emotion-euiText-s"
    >
      Update rule condition from 5 to
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFormControlLayout emotion-euiFormControlLayout-compressed"
    >
      <div
        class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
      >
        <input
          aria-label="Enter numeric value for condition"
          class="euiFieldNumber emotion-euiFieldNumber-compressed"
          placeholder="Enter value"
          step="any"
          type="number"
          value="208.8"
        />
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <button
      class="euiLink emotion-euiLink-primary"
      type="button"
    >
      Update
    </button>
  </div>
</div>
`;

exports[`EditConditionLink renders for a condition using typical 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-center-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiText emotion-euiText-s"
    >
      Update rule condition from 5 to
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFormControlLayout emotion-euiFormControlLayout-compressed"
    >
      <div
        class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
      >
        <input
          aria-label="Enter numeric value for condition"
          class="euiFieldNumber emotion-euiFieldNumber-compressed"
          placeholder="Enter value"
          step="any"
          type="number"
          value="1.23"
        />
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <button
      class="euiLink emotion-euiLink-primary"
      type="button"
    >
      Update
    </button>
  </div>
</div>
`;
